// Copyright 2017 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// Protocol buffer definition for a location descriptor, used for sending
// geographical information to the Default Search Engine in omnibox queries
// when location permissions are granted.
//
// TODO(lbargu): Move over to standard Geo header once it is defined, and remove
// this proto structure from chromium code base.
//
// NOTE: This is currently using a Google-defined structure. This explains the
// jumps in values. New fields cannot be added to this proto directly. See
// https://goto.google.com/partner_location_proto

syntax = "proto2";

package org.chromium.chrome.browser.omnibox.geo;

option java_outer_classname = "PartnerLocationDescriptor";
option java_package = "org.chromium.chrome.browser.omnibox.geo";
option optimize_for = LITE_RUNTIME;

enum LocationRole {
  UNKNOWN_ROLE = 0;
  CURRENT_LOCATION = 1;
}

enum LocationProducer {
  UNKNOWN_PRODUCER = 0;
  DEVICE_LOCATION = 12;
}

message LatLng {
  optional sfixed32 latitude_e7 = 1;
  optional sfixed32 longitude_e7 = 2;
}

message LocationDescriptor {
  optional LocationRole role = 1 [default = UNKNOWN_ROLE];
  optional LocationProducer producer = 2 [default = UNKNOWN_PRODUCER];
  optional int64 timestamp = 3;
  optional LatLng latlng = 5;
  optional float radius = 7;
  reserved 23;
}
